crates/strider-analyze/tests/snapshots/ppc32le__builtins__popcount64.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0xff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x18:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x1010101:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xf0f0f0f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xfffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x33330000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="Neg\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x55550000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x5555:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x1e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x3333:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x33333333:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x1c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "3" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "51" -> "3" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "4" -> "3" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0xff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "54" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x18:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x1010101:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0xf0f0f0f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0xfffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "66" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "69" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x33330000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "75" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "77" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "77" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "79" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="Neg\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "81" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "81" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "82" -> "81" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "81" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "84" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0x55550000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "84" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "86" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "87" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "79" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "88" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "88" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "79" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "86" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "79" -> "86" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "89" -> "86" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "89" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "82" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "84" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "90" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "90" [label="const 0x5555:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "75" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "77" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "91" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "91" [label="const 0x1e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "71" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "73" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "92" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "92" [label="const 0x3333:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "77" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "93" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "93" [label="const 0x33333333:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "94" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "94" [label="const 0x1c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "95" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "95" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "96" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v97" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v97" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "79" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "98" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "96" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "99" -> "96" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v100" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v100" -> "96" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "96" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "99" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "101" -> "99" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v102" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v102" -> "99" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "103" -> "99" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "103" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "101" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "104" -> "101" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v105" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v105" -> "101" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "98" -> "101" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "104" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
